--- a/BioCro/DARPA/biomass_opti/scripts/optimize_biomass_coef.Rmd
+++ b/BioCro/DARPA/biomass_opti/scripts/optimize_biomass_coef.Rmd
@@ -37,23 +37,43 @@ l2n <- function(x) lapply(x, as.numeric)
 day1 <- 1
 dayn <- 50
 
-opt_biomass <- read.csv("~/model-vignettes/BioCro/DARPA/biomass_opti/inputs/ch_biomass.csv") %>% 
-  select(-LAI)
+opt_biomass <- read.csv("~/model-vignettes/BioCro/DARPA/biomass_opti/inputs/ch_biomass.csv")
 ```
 
 We want biomass estimates from `BioGro` (i.e., ttt) to be as close to the actual biomass values as possible (i.e., opt_biomass). Will be optimizing over the parameters, which are the biomass coefficients. 
 
+To allow grain to accumulate prior to the final timestep, create an updated phenoParms function. 
+```{r}
+library(BioCro)
+phenoParms <- function(tp1=562, tp2=1312, tp3=2063, tp4=2676, tp5=3211, tp6=7000,
+                       kStem1=0.37, kLeaf1=0.33, kRoot1=0.3, kRhizome1=-8e-4, 
+                       kStem2=0.85, kLeaf2=0.14, kRoot2=0.01, kRhizome2=-5e-4, 
+                       kStem3=0.63, kLeaf3=0.01, kRoot3=0.01, kRhizome3=0.35, 
+                       kStem4=0.63, kLeaf4=0.01, kRoot4=0.01, kRhizome4=0.35, 
+                       kStem5=0.63, kLeaf5=0.01, kRoot5=0.01, kRhizome5=0.35, 
+                       kStem6=0.63, kLeaf6=0.01, kRoot6=0.01, kRhizome6=0.35, 
+                       kGrain1 = 0, kGrain2 = 0, kGrain3 = 0, kGrain4 = 0, kGrain5=0, kGrain6=0){
+  list(tp1=tp1, tp2=tp2, tp3=tp3, tp4=tp4, tp5=tp5, tp6=tp6,
+       kStem1=kStem1, kLeaf1=kLeaf1, kRoot1=kRoot1, kRhizome1=kRhizome1, 
+       kStem2=kStem2, kLeaf2=kLeaf2, kRoot2=kRoot2, kRhizome2=kRhizome2, 
+       kStem3=kStem3, kLeaf3=kLeaf3, kRoot3=kRoot3, kRhizome3=kRhizome3, 
+       kStem4=kStem4, kLeaf4=kLeaf4, kRoot4=kRoot4, kRhizome4=kRhizome4, 
+       kStem5=kStem5, kLeaf5=kLeaf5, kRoot5=kRoot5, kRhizome5=kRhizome5, 
+       kStem6=kStem6, kLeaf6=kLeaf6, kRoot6=kRoot6, kRhizome6=kRhizome6, 
+       kGrain1=kGrain1, kGrain2=kGrain2, kGrain3=kGrain3, kGrain4=kGrain4, kGrain5=kGrain5, kGrain6=kGrain6)
+}
+valid_dbp <- function(x, tol = 1) return(x)
+```
+
 First create objective function `opfn`, and include parameter values to test if this function by itself works. 
 ```{r, message=FALSE}
-library(BioCro)
-
 opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){ 
-  optimizingParms[1:3] <- optimizingParms[1:3]/sum(optimizingParms[1:3])
-  optimizingParms[4:6] <- optimizingParms[4:6]/sum(optimizingParms[4:6])
-  optimizingParms[7:9] <- optimizingParms[7:9]/sum(optimizingParms[7:9])
-  optimizingParms[10:12] <- optimizingParms[10:12]/sum(optimizingParms[10:12])
-  optimizingParms[13:15] <- optimizingParms[13:15]/sum(optimizingParms[13:15])
-  optimizingParms[16:19] <- optimizingParms[16:19]/sum(optimizingParms[16:19])
+  optimizingParms[1:4] <- optimizingParms[1:4]/sum(optimizingParms[1:4])
+  optimizingParms[5:8] <- optimizingParms[5:8]/sum(optimizingParms[5:8])
+  optimizingParms[9:12] <- optimizingParms[9:12]/sum(optimizingParms[9:12])
+  optimizingParms[13:16] <- optimizingParms[13:16]/sum(optimizingParms[13:16])
+  optimizingParms[17:20] <- optimizingParms[17:20]/sum(optimizingParms[17:20])
+  optimizingParms[21:24] <- optimizingParms[21:24]/sum(optimizingParms[21:24])
   params_list <- phenoParms(tp1 = thermaltimeParms[1], 
                            tp2 = thermaltimeParms[2], 
                            tp3 = thermaltimeParms[3], 
@@ -61,30 +81,35 @@ opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){
                            tp5 = thermaltimeParms[5], 
                            tp6 = thermaltimeParms[6], 
                            kStem1 = optimizingParms[1], 
-                           kStem2 = optimizingParms[4], 
-                           kStem3 = optimizingParms[7], 
-                           kStem4 = optimizingParms[10], 
-                           kStem5 = optimizingParms[13], 
-                           kStem6 = optimizingParms[16], 
-                           kLeaf1 = optimizingParms[2], 
-                           kLeaf2 = optimizingParms[5], 
-                           kLeaf3 = optimizingParms[8], 
-                           kLeaf4 = optimizingParms[11], 
-                           kLeaf5 = optimizingParms[14], 
-                           kLeaf6 = optimizingParms[17], 
-                           kRoot1 = optimizingParms[3], 
-                           kRoot2 = optimizingParms[6], 
-                           kRoot3 = optimizingParms[9], 
-                           kRoot4 = optimizingParms[12], 
-                           kRoot5 = optimizingParms[15], 
-                           kRoot6 = optimizingParms[18], 
+                           kLeaf1 = optimizingParms[2],
+                           kRoot1 = optimizingParms[3],
+                           kGrain1 = optimizingParms[4],
+                           kStem2 = optimizingParms[5], 
+                           kLeaf2 = optimizingParms[6],
+                           kRoot2 = optimizingParms[7],
+                           kGrain2 = optimizingParms[8],
+                           kStem3 = optimizingParms[9], 
+                           kLeaf3 = optimizingParms[10],
+                           kRoot3 = optimizingParms[11],
+                           kGrain3 = optimizingParms[12],
+                           kStem4 = optimizingParms[13], 
+                           kLeaf4 = optimizingParms[14],
+                           kRoot4 = optimizingParms[15],
+                           kGrain4 = optimizingParms[16],
+                           kStem5 = optimizingParms[17], 
+                           kLeaf5 = optimizingParms[18],
+                           kRoot5 = optimizingParms[19],
+                           kGrain5 = optimizingParms[20],
+                           kStem6 = optimizingParms[21], 
+                           kLeaf6 = optimizingParms[22],
+                           kRoot6 = optimizingParms[23],
+                           kGrain6 = optimizingParms[24],
                            kRhizome1 = rhizomeParms[1], 
                            kRhizome2 = rhizomeParms[2], 
                            kRhizome3 = rhizomeParms[3], 
                            kRhizome4 = rhizomeParms[4], 
                            kRhizome5 = rhizomeParms[5], 
-                           kRhizome6 = rhizomeParms[6], 
-                           kGrain6 = optimizingParms[19])
+                           kRhizome6 = rhizomeParms[6])
   
   t <- BioCro::BioGro(
     WetDat = opt_weather,
@@ -131,10 +156,8 @@ opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){
 }
 
 # Check function itself by running with example parameter values
-optimizingParms_check <- c(rep(c(0.2, 0.3, 0.5), 6), 0)
-thermaltimeParms_check <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
-                      config$pft$phenoParms$tp3, config$pft$phenoParms$tp4,
-                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
+optimizingParms_check <- rep(c(0.2, 0.3, 0.4, 0.1), 6)
+thermaltimeParms_check <- as.numeric(unlist(config$pft$phenoParms[grep("tp", names(config$pft$phenoParms))]))
 rhizomeParms_check <- rep(0, 6)
 opfn(optimizingParms_check, thermaltimeParms_check, rhizomeParms_check)
 ```
